desenv_tests/test-assets/field/failure/default_wrong_usage_1.stderr
error: `default` modifier cannot contain more than one modifier
 --> test-assets/field/failure/default_wrong_usage_1.rs:5:14
  |
5 |     #[desenv(default(value = "value", env = "ENV"))]
  |              ^^^^^^^
